# Phantom

./: .dockerignore  .env.example  .env.local.example  .gitignore  DEPLOYMENT.md  Dockerfile.web  Makefile  README.md  backup.sh  build.sh  catalog-export.sh  catalog-import.sh  change.sh  change_credentials.sh  clean.sh  debug.sh  deploy.sh  docker-compose.yml  healthcheck.sh  install.sh  logs.sh  next.config.ts  package-lock.json  package.json  phantom  restart.sh  server-dev.mjs  server-prod.mjs  start-dev.sh  start-prod.sh  start.sh  stop.sh  test-gen.ts  test-parser.js  test-parser.ts  tsconfig.json  uninstall.sh  verify-env.sh
.github/workflows/: sbom.yml
backend/: .env.embedded.example  .env.example  requirements.txt
backend/app/: bootstrap_db.py  catalog_sql.py  config.py  database.py  db_startup.py  main.py  (+1 more)
docs/: API.md  DICCIONARIO_DATOS.md  MANUAL_IA_VALIDACION.md  METODOLOGIA_SPECTRA.md  REPORTES_CLIENTE.md  TAD.md
ops/: README.md  backup.sh  build.sh  catalog-export.sh  catalog-import.sh  change.sh  clean.sh  debug.sh  dev.sh  healthcheck.sh  install.sh  lib.sh  logs.sh  phantom  prod.sh  restart.sh  sbom.sh  start.sh  stop.sh  uninstall.sh  update.sh  verify-env.sh
public/: nmap-worker.js
scripts/: docker-entrypoint-api.sh  docker-entrypoint-web.sh  docker-generate-tls.sh  fix-docker-access.sh  generate-certs.sh  install-ubuntu.sh  load-cert-hosts.sh  phantom-lib.sh  setup-embedded.sh  start-native.sh
services/: README.md
services/phantom-parse/: Cargo.toml
services/phantom-parse/src/: main.rs
src/: proxy.ts
storage/: README.md
(+392 files in other folders)
