[package]
name = "phantom-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
csv = "1.3"
tower-http = { version = "0.5", features = ["limit"] }
